 * HedgeEditor: Fix major FPS drop when there are a lot of objects
 * Control: Fix score failure after using extra time

A Classic Fairytale:
 + Backstab: Disable utilities before traitor has been dealt with
 * Backstab: Prevent attacking the cannibals before making the choice
 * First blood: Fix Lua error when hitting Attack after failing the rope challenge
 * The Shadow Falls: Fix Lua error when hog dies during choice phase
 * General: Clear hazards around cyborg when it appears in cut scenes
 * General: Disable Sudden Death for all missions
 * Various minor tweaks and bugfixes

A Space Adventure:
 + Show your current records at mission start when re-playing one of the challenges
 + Spacetrip: Move flowers of desert planet above cactus
 + Searching in the dust: Enable skip in entire mission
 * Searching in the dust: Fix mission ending when all smugglers are dead
 * Searching in the dust: Fix a lot of broken/stupid smuggler behaviours
 * Chasing the blue hog: Fix player not losing the race when timing out while still having the rope
 * Chasing the blue hog: Fix player winning if Crazy Runner died
 * Getting to the device: Fix clan colors
 * Various minor tweaks and bugfixes

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Add support for 4th and 5th mouse buttons
 + Allow to leave a control unused
 + Reset zoom resets zoom to zoom level set in options
 + Add control to display mines time and health crate health (default: O)
 + Precise + Reset zoom resets zoom to 100% (instead of zoom in options)
 + Precise + zoom in/out changes zoom in smaller steps
 + Precise + volume up/down changes volume in smaller steps
 + Precise + cursor move keys move camera slower
 + New chat command: “/help room” (shows room chat commands within the game)
 + Default demo fast-forward key changed from “S” to “F”
 + Default fallback Sudden Death music of themes (fallback-sd-music) is now sdmusic.ogg